[package]
name = "dtk-pal"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.6.0", features = ["auto-color"] }
chumsky = { version = "0.12.0", features = ["regex"] }
enumset = { version = "1.1.10", features = ["serde"] }
eyre = "0.6.12"
relative-path = "2.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
