[package]
name = "dtk-pal"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = { version = "0.6.0", features = ["auto-color"] }
chumsky = { version = "0.12.0", features = ["regex"] }
clap = { version = "4.6.1", features = ["derive"] }
enumset = { version = "1.1.10", features = ["serde"] }
eyre = "0.6.12"
relative-path = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.4"
